--- a/checkout.html
+++ b/checkout.html
@@ -55,8 +55,7 @@
                     </ul>
                   </div>
                 </div>
-              </nav>
-           
+            </nav>
         </div>
         
         <!-- <div class="content-body">
@@ -68,7 +67,7 @@
 
         <div class="container-md">
             <div class="row">
-                <div class="col-12 products-label mt-3">Products</div>
+                <div class="col-12 products-label mt-3">Checkout</div>
             </div>
             <div class="row products-list g-5"></div>
         </div>
@@ -78,22 +77,7 @@
         </div>
     </div>
 
-<!-- Modal -->
-<div class="modal fade" id="viewProductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header border-0">
-        <h5 class="modal-title" id="exampleModalLabel">View Product</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div id="productContent" class="p-3 pt-0"></div>
-      </div>
-    </div>
-  </div>
-</div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 </html>
